Fri Oct 12 01:32:52 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (device_table): groff's ascii device only supports
	  ASCII input, not ISO-8859-1.
	  (compatible_encodings): If the output is ASCII, this is probably
	  because the caller explicitly asked for it, so allow recoding to
	  it unconditionally.

Fri Oct 12 00:48:42 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (main): locale is a constant pointer; free
	  internal_locale instead (Debian bug #446302).

Thu Oct 11 01:40:51 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): Free format_cmd on two more early return
	  paths.

Thu Oct 11 00:53:31 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): I don't think it's possible for decomp to be
	  NULL on the display_to_stdout path, but better safe than sorry.

Thu Oct 11 00:38:56 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): Connect up the decompression pipeline in the
	  display_to_stdout case too (Debian bug #446189).
	  (checked_system): Remove, no longer used.

Thu Oct 11 00:21:49 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): Perform input encoding conversion
	  for troff output as well as nroff output.

Wed Oct 10 09:39:53 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/man8/mandb.man8 (DATABASE CACHES): Fix "occured" typo (thanks,
	  Alfie Costa; Debian bug #446044).

Mon Oct  8 02:24:19 BST 2007  Colin Watson  <cjwatson@debian.org>

	* lib/popen.c (popen), src/descriptions.c (parse_descriptions),
	  src/man.c (add_candidate), src/manp.c (add_dir_to_path_list): Use
	  xmalloc instead of malloc.
	* lib/pipeline.c (get_block): Use xrealloc instead of realloc.

Mon Oct  8 02:15:47 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING: Minor release process adjustment now that we're no
	  longer using CVS.

Mon Oct  8 02:13:15 BST 2007  Colin Watson  <cjwatson@debian.org>
